horizontal scroll fix, home mobile cleanup

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -158,7 +158,7 @@
   position: absolute;
   background-color: var(--light);
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2000;
 }
 
@@ -368,7 +368,7 @@ br.big {
 }
 
 .honeypot {
-  display:none !important;
+  display: none !important;
 }
 
 .slight-radius {
@@ -994,6 +994,7 @@ h2.post-card-title {
 
 #disco-area {
   margin-right: 0px;
+  overflow-x: hidden !important;
 }
 
 #disco-column {
@@ -1454,6 +1455,7 @@ img.youtube-thumb {
   height: auto;
 }
 
+/* old play button
 div.play-button {
   height: 72px;
   width: 72px;
@@ -1464,7 +1466,7 @@ div.play-button {
   position: absolute;
   background: url("https://4.bp.blogspot.com/-Me01YYEE7nU/Vx_UViCgJkI/AAAAAAAABe0/IDEvL5vov8gq5qwLELNEcwKVzcLKaLJbwCLcB/s1600/TxzC70f.png")
     no-repeat;
-}
+} */
 
 #youtube-iframe {
   width: 1px;
